# Threat-Intelligence-ML-Detector

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPENDENCIES.md  DOCKER.md  Dockerfile  FRONTEND_PLAN.md  LICENSE  Makefile  PROGRESS.md  PROGRESS_SESSION4.md  PROJECT_COMPLETE.md  README.md  README_COURSE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
application/use_cases/: scrape_and_extract.py
docs/01regresion/: 01-introduccion-ml-regresion-lineal.md  02-funcion-hipotesis-regresion-lineal.md  03-funcion-coste-entrenamiento.md  04-gradient-descent.md  05-regresion-polinomica.md  06-regularizacion-ridge-lasso.md  07-evaluacion-modelos-regresion.md
docs/02-clasificacion/: 09-arboles-decision.md  10-random-forest.md  11-support-vector-machines.md  12-naive-bayes.md  13-gradient-boosting-xgboost.md  14-introduccion-clasificacion-regresion-logistica.md
docs/03-clustering/: 15-introduccion-clustering.md  16-kmeans.md  17-dbscan.md  18-clustering-jerarquico.md  19-gaussian-mixture-models.md
docs/04-redes-neuronales/: 20-introduccion-redes-neuronales.md  21-mlp-feedforward.md  22-cnn-redes-convolucionales.md  23-rnn-redes-recurrentes.md  24-autoencoders.md  25-transformers-attention.md
docs/05-series-temporales/: 26-introduccion-series-temporales.md  27-arima-sarima.md  28-suavizado-exponencial.md  29-prophet-descomposicion.md  30-deep-learning-series.md  31-deteccion-anomalias-temporales.md
docs/06-reduccion-dimensionalidad/: 31-introduccion-dimensionalidad.md  32-pca.md  33-tsne-umap.md  34-feature-selection.md  35-aplicaciones-seguridad.md
docs/07-NLP/: 36-introduccion-nlp-preprocesamiento.md  37-vectorizacion-texto-tfidf.md  38-word-embeddings.md  39-modelos-secuencia-nlp.md  40-transformers-bert.md  41-ner-pos-tagging.md  42-topic-modeling.md  43-sentiment-analysis.md
docs/08-Computer-Vision/: 44-introduccion-procesamiento-imagenes.md  45-cnns-fundamentos.md  46-arquitecturas-cnn-clasicas.md  47-transfer-learning-cv.md  48-deteccion-objetos.md  49-segmentacion-imagenes.md  50-vision-transformers.md  51-gans-generacion-imagenes.md
docs/09-mlops-produccion/: 52-introduccion-mlops.md  53-experiment-tracking-mlflow.md  54-feature-stores.md  55-model-serving.md  56-cicd-ml.md  57-monitoreo-drift.md  58-ab-testing-modelos.md
docs/10-matematicas-ml/: 59-optimizacion-convexa.md  60-estadistica-bayesiana.md  61-teoria-informacion.md  62-algebra-lineal-numerica.md
docs/11-reinforcement-learning/: 63-introduccion-rl.md  64-q-learning-dqn.md  65-policy-gradient.md  66-actor-critic.md  67-multi-agent-rl.md  68-aplicaciones-rl-seguridad.md
docs/12-llms-generative-ai/: 69-arquitectura-llms.md  70-fine-tuning-llms.md  71-rlhf.md  72-prompt-engineering.md  73-rag-avanzado.md  74-agents-tool-use.md
docs/13-modelos-generativos/: 77-diffusion-models.md  78-stable-diffusion.md  79-vaes-avanzados.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf
historyMD/: AGENTS.md  AGENTs.md  CREATE_BACKEND_NOW.md  DEPLOYMENT_STATUS.md  FASE1_COMPLETADA.md  FASE2_COMPLETADA.md  FASE3_COMPLETADA.md  FASE4_COMPLETADA.md  FASE5_COMPLETADA.md  FASE6_COMPLETADA.md  FASE7_COMPLETADA.md  FIX_SUMMARY.md  INSTRUCCIONES_PERSISTENCIA_MODELOS.md  MLFLOW_WORKFLOW_GUIDE.md  NOTEBOOKS_CREADOS.md  PACKAGE_README.md  PLAN_EMAIL_CLASSIFIER.md  PLAN_FASTAPI_INTEGRATION.md  README_DEPLOYMENT.md  README_EMAIL_CLASSIFIER.md  README_PERSISTENCIA.md  REFACTORING_COMPLETADO.md  SETUP_MLFLOW_LFS.sh  TROUBLESHOOTING_RENDER.md  URGENT_FIX.md  model_persistence_cells.md
models/: skills_assessment.joblib
scripts/: scrape_and_populate.py  test_pipeline.py  train_ml_models.py
(+73 files in other folders)
